# Snake-OpenGL

./: CMakeLists.txt
include/: Food.hpp  ShaderProgram.hpp  Square.hpp
include/KHR/: khrplatform.h
include/glad/: glad.h
shaders/: simplevs.glsl
src/: ShaderProgram.cpp  Square.cpp  glad.c  main.cpp
